fixed table-counts template issue

--- a/client/src/themes/overrides/card-table.overrides.less
+++ b/client/src/themes/overrides/card-table.overrides.less
@@ -12,7 +12,7 @@ nz-card:first-of-type ::ng-deep {
 }
 
 .table-counts {
-  margin-left: 1rem;
+  margin-left: .5rem;
 }
 
 tr.col-header-row th.ant-table-cell {
