moved 'loading' indicator to table-info area

--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -35,7 +35,6 @@
     [nzVirtualItemSize]="29"
     [nzVirtualForTrackBy]="trackByIndex"
     [nzData]="row$ | ngrxPush"
-    [nzLoading]="isLoading$ | ngrxPush"
     [nzScroll]="{ x: '680px', y: '800px' }"
     [nzFrontPagination]="false"
     [nzShowPagination]="false">
@@ -488,8 +487,19 @@
     {{ this.cvcTitle }}
   </ng-container>
 
-  <span class="table-counts">
-    <cvc-table-counts [cvcConnection]="(tableConnection$ | ngrxPush)"></cvc-table-counts>
+  <span *ngrxLet="tableInfo$ as ti"
+    class="table-info">
+    <ng-container *ngIf="ti.tableConnection as tableConnection">
+    <span [ngClass]="{ 'hide': ti.isLoading, 'show': !ti.isLoading  }">
+      <cvc-table-counts [cvcConnection]="tableConnection"></cvc-table-counts>
+    </span>
+  </ng-container>
+  <span *ngIf="(isLoading$ | ngrxPush) as isLoading" [ngClass]="{ 'hide': !isLoading, 'show': isLoading  }">
+    <nz-tag nzColor="processing">
+        <i nz-icon nzType="sync" nzSpin></i>
+        <span>Loading…</span>
+    </nz-tag>
+  </span>
   </span>
 </ng-template>
 
