--- a/client/src/themes/overrides/card-table.overrides.less
+++ b/client/src/themes/overrides/card-table.overrides.less
@@ -11,9 +11,17 @@ nz-card:first-of-type ::ng-deep {
   }
 }
 
-.table-counts {
+.table-info{
   margin-left: .5rem;
+  .hide {
+    display: none
+  }
+  .show {
+    display: inline-block
+  }
 }
+
+
 
 tr.col-header-row th.ant-table-cell {
   white-space: nowrap;
