moved all the counts calc into table-counts

--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -488,7 +488,7 @@
   </ng-container>
 
   <span class="table-info">
-    <cvc-table-counts [cvcTableCountsInfo]="tableCountsInfo$ | ngrxPush"></cvc-table-counts>
+    <cvc-table-counts [cvcTableCountsConnection]="connection$"></cvc-table-counts>
   </span>
 </ng-template>
 
