--- a/client/src/app/components/shared/table-counts/table-counts.component.html
+++ b/client/src/app/components/shared/table-counts/table-counts.component.html
@@ -1,5 +1,5 @@
 <span
-  *ngIf="cvcTableCountsInfo as tci"
+  *ngIf="(tableCountsInfo$ | ngrxPush) as tci"
   class="table-counts"
   nz-typography
   nzType="secondary">
