moved all query FetchVar calc into table-scroll

--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -32,7 +32,7 @@
     cvcTableScroll
     (cvcTableScrollOnScroll)="onScroll($event)"
     [cvcTableScrollQueryRef]="queryRef"
-    [cvcTableScrollFetchVars]="fetchVar$ | ngrxPush"
+    [cvcTableScrollPageInfo]="pageInfo$ | ngrxPush"
     [nzVirtualItemSize]="29"
     [nzVirtualForTrackBy]="trackByIndex"
     [nzData]="row$ | ngrxPush"
