--- a/client/src/app/forms/config/types/duplicate-evidence-warning/duplicate-evidence-warning.html
+++ b/client/src/app/forms/config/types/duplicate-evidence-warning/duplicate-evidence-warning.html
@@ -8,6 +8,6 @@
       <cvc-evidence-table 
       [sourceId]="this.to.evidenceParams.sourceId"
       [variantId]="this.to.evidenceParams.variantId"
-      (totalCountChanges)="this.initalCountLoaded($event)" ></cvc-evidence-table>
+      (initialTotalCount)="this.initalCountLoaded($event)" ></cvc-evidence-table>
   </ng-template>
 </ng-container>
