--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -156,30 +156,30 @@
         </th>
         <th nzLeft>
           <cvc-clearable-input-filter [(inputModel)]="eidInput"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+            (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
         </th>
         <th *ngIf="displayGeneAndVariant">
           <cvc-clearable-input-filter [(inputModel)]="geneSymbolInput"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+            (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
         </th>
         <th *ngIf="displayGeneAndVariant">
           <cvc-clearable-input-filter [(inputModel)]="variantNameInput"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+            (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
         </th>
         <th>
           <cvc-clearable-input-filter [(inputModel)]="diseaseNameInput"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+            (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
         </th>
         <th>
           <cvc-clearable-input-filter [(inputModel)]="drugNameInput"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+            (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
         </th>
         <th>
         </th>
         <th nzAlign="center"
           nzRight>
           <cvc-clearable-input-filter [(inputModel)]="descriptionInput"
-            [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+            (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
         </th>
         <th nzAlign="center"
           nzRight>
@@ -187,7 +187,7 @@
             nzPlaceHolder="All"
             nzSize="small"
             [nzDropdownMatchSelectWidth]="false"
-            (ngModelChange)="onModelChanged()"
+            (ngModelChange)="filterChange$.next()"
             [(ngModel)]="evidenceLevelInput">
             <nz-option nzValue="A"
               nzLabel="A"></nz-option>
@@ -207,7 +207,7 @@
             nzPlaceHolder="All"
             nzSize="small"
             [nzDropdownMatchSelectWidth]="false"
-            (ngModelChange)="onModelChanged()"
+            (ngModelChange)="filterChange$.next()"
             [(ngModel)]="evidenceTypeInput">
             <nz-option nzValue="PREDICTIVE"
               nzLabel="Predictive"></nz-option>
@@ -230,7 +230,7 @@
             nzSize="small"
             [nzDropdownMatchSelectWidth]="false"
             [nzDropdownMatchSelectWidth]="false"
-            (ngModelChange)="onModelChanged()"
+            (ngModelChange)="filterChange$.next()"
             [(ngModel)]="evidenceDirectionInput">
             <nz-option nzValue="SUPPORTS"
               nzLabel="Supports"></nz-option>
@@ -246,7 +246,7 @@
             nzPlaceHolder="All"
             nzSize="small"
             [nzDropdownMatchSelectWidth]="false"
-            (ngModelChange)="onModelChanged()"
+            (ngModelChange)="filterChange$.next()"
             [(ngModel)]="clinicalSignificanceInput">
             <nz-option-group nzLabel="Predictive">
               <nz-option nzValue="SENSITIVITYRESPONSE"
@@ -304,7 +304,7 @@
             nzPlaceHolder="All"
             nzSize="small"
             [nzDropdownMatchSelectWidth]="false"
-            (ngModelChange)="onModelChanged()"
+            (ngModelChange)="filterChange$.next()"
             [(ngModel)]="variantOriginInput">
             <nz-option nzValue="SOMATIC"
               nzLabel="Somatic"></nz-option>
@@ -326,7 +326,7 @@
             nzPlaceHolder="All"
             nzSize="small"
             [nzDropdownMatchSelectWidth]="false"
-            (ngModelChange)="onModelChanged()"
+            (ngModelChange)="filterChange$.next()"
             [(ngModel)]="evidenceRatingInput">
             <nz-option [nzValue]="1"
               nzLabel="1"></nz-option>
